# omnis2-pi-analysis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  GITHUB_SETUP.md  GSLM_NAME_ANALYSIS.md  HOW_TO_CREATE_PACKAGES.md  HOW_TO_CREATE_RELEASES.md  LEGAL_ANALYSIS.md  LICENSE  README.md  README_PL.md  RELATED_PROJECTS.md  RELEASE_DESCRIPTION.md  RELEASE_NOTES_v1.0.0.md  WZORY_MATEMATYCZNE_27_TESTOW_latex.md  generuj_raport_kompletny_final.py  generuj_raport_kompletny_final_EN.py  pyproject.toml  requirements.txt  setup.py  sprawdz_status_ssh.sh  step_04_entropy.py  step_05_spectral_fft.py  step_07_entropy_bounds.py
.github/: PULL_REQUEST_TEMPLATE.md
Dane z analizy/: 05_results.json  07_status.json  12_status.json  13_status.json  25_status.json  27_status.json
OMNIS2/: README.md  WZORY_MATEMATYCZNE_27_TESTOW_fixed.md
Program/: README.md  analysis_orchestrator.py
Raporty_gotowe/: 04_status.json  OPCJA_C_STATUS.md  OPCJA_C_UKONCZONA.md  PLAN_ANALIZ_EXPERIMENTAL_MATH.md
analiza_wynikow_output/: RAPORT_ANALIZY.txt  RAPORT_NAUKOWY_PI.tex  RAPORT_NAUKOWY_PI_EN.tex  wyniki_tabela.csv
analysis_steps/: base_step.py  step_01_frequency.py  step_03_block_frequency.py  step_05_spectral_fft.py  step_06_compression.py  step_08_ml_lstm.py  step_10_approximate_entropy.py  step_12_linear_complexity.py  step_14_random_excursions_variant.py  step_15_universal_statistical.py  step_16_non_overlapping_template.py  step_17_overlapping_template.py  step_19_collision.py  step_20_gap.py  step_21_simple_poker.py  step_22_coupon_collector.py  step_24_weight_distrib.py  step_26_hamming_indep.py  step_27_random_walk1.py
dane_z_windows/: 06_results.json  07_results.json  08_status.json  09_results.json  17_results.json  18_results.json  19_status.json  21_results.json  23_results.json  27_results.json  LISTA_PLIKOW.md  README.md
releases/: CHANGELOG.md  INSTALLATION.md  README.md  RELEASE_NOTES.md
smiecie/: ANALIZA_10B_STATUS.md  ANALIZA_10B_URUCHOMIONA.md  CUPY_ALTERNATYWA.md  CUPY_INSTALACJA_WINDOWS.md  INSTALACJA_BUILD_TOOLS_INSTRUKCJA.md  INSTALACJA_STATUS.md  (+25 more)
(+199 files in other folders)
