[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "omnis2-pi-analysis"
version = "1.0.0"
description = "Comprehensive statistical analysis of Pi digits using 27 statistical tests"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "baver"}
]
keywords = ["pi", "statistics", "randomness", "nist", "testu01", "mathematical-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "torch>=1.9.0",
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/Baver1022/omnis2-pi-analysis"
Documentation = "https://github.com/Baver1022/omnis2-pi-analysis/tree/OMNIS2"
Repository = "https://github.com/Baver1022/omnis2-pi-analysis"
Issues = "https://github.com/Baver1022/omnis2-pi-analysis/issues"

[project.scripts]
omnis2-analyze = "analysis_orchestrator:main"

[tool.setuptools]
packages = ["analysis_steps"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]

